<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:fitsSystemWindows="true"
    android:focusableInTouchMode="true"
    tools:context="com.abdulwd.lifeline.LoginActivity">

    <ImageView
        android:id="@+id/login_hospital"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="24dp"
        android:elevation="12dp"
        android:src="@drawable/hospital"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_lifeline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lifeline"
        android:textColor="@color/textColor"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_hospital" />

    <TextView
        android:id="@+id/login_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_history_stays_with_us"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_lifeline" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_user_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="55dp"
        app:layout_constraintTop_toBottomOf="@id/login_msg">

        <EditText
            android:id="@+id/et_aadhar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_aadhaar"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="12"
            android:textColor="@color/textColor" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/login_user_id">

        <EditText
            android:id="@+id/et_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/otp"
            android:inputType="number"
            android:textColor="@color/textColor" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/login_patient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:text="@string/login_doctor"
        android:textColor="@color/textColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/otp" />

    <TextView
        android:id="@+id/click_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/click_here"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@id/login_patient"
        app:layout_constraintStart_toEndOf="@id/login_patient"
        app:layout_constraintTop_toTopOf="@id/login_patient" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_verify_otp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_bg"
        android:text="VERIFY OTP"
        android:textColor="#ffff"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/otp" />

</android.support.constraint.ConstraintLayout>
